crates/parser/tests/snapshots/quoted_string_space_content.snap
---
source: crates/parser/tests/snapshots.rs
---
# quoted-string-space-content

## Input

```
a " "
b '  '

```

## CST

```
SOURCE_FILE@0..13
  ENTRY@0..6
    WORD_KEY@0..1
      WORD@0..1 "a"
    SPACE@1..2 " "
    QUOTED_STRING@2..5
      DOUBLE_QUOTE@2..3 "\""
      STRING@3..4 " "
      DOUBLE_QUOTE@4..5 "\""
    NEWLINE@5..6 "\n"
  ENTRY@6..13
    WORD_KEY@6..7
      WORD@6..7 "b"
    SPACE@7..8 " "
    QUOTED_STRING@8..12
      SINGLE_QUOTE@8..9 "'"
      STRING@9..11 "  "
      SINGLE_QUOTE@11..12 "'"
    NEWLINE@12..13 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..1 "a",
            },
            value: QuotedString {
                open_quote: DOUBLE_QUOTE@2..3 "\"",
                string: STRING@3..4 " ",
                close_quote: DOUBLE_QUOTE@2..3 "\"",
            },
        },
        Entry {
            key: WordKey {
                word: WORD@6..7 "b",
            },
            value: QuotedString {
                open_quote: SINGLE_QUOTE@8..9 "'",
                string: STRING@9..11 "  ",
                close_quote: SINGLE_QUOTE@8..9 "'",
            },
        },
    ],
}
```

vim:ft=markdown
