crates/parser/tests/snapshots/quoted_string_unclosed_at_eof.snap
---
source: crates/parser/tests/snapshots.rs
---
# quoted-string-unclosed-at-eof

## Input

```
a "unclosed
```

## CST

```
SOURCE_FILE@0..11
  ENTRY@0..11
    WORD_KEY@0..1
      WORD@0..1 "a"
    SPACE@1..2 " "
    QUOTED_STRING@2..11
      DOUBLE_QUOTE@2..3 "\""
      STRING@3..11 "unclosed"
```

## Syntax Error

```
[
    SyntaxError {
        message: "missing closing quote",
        range: 11..11,
    },
]
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..1 "a",
            },
            value: QuotedString {
                open_quote: DOUBLE_QUOTE@2..3 "\"",
                string: STRING@3..11 "unclosed",
                close_quote: DOUBLE_QUOTE@2..3 "\"",
            },
        },
    ],
}
```

vim:ft=markdown
