crates/parser/tests/snapshots/shebang_no_trailing_newline.snap
---
source: crates/parser/tests/snapshots.rs
---
# shebang-no-trailing-newline

## Input

```
#!/usr/bin/env mical
```

## CST

```
SOURCE_FILE@0..20
  DIRECTIVE@0..20
    SHARP@0..1 "#"
    WORD@1..14 "!/usr/bin/env"
    LINE_STRING@14..20
      STRING@14..20 " mical"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Directive {
            sharp: SHARP@0..1 "#",
            name: WORD@1..14 "!/usr/bin/env",
            args: LineString {
                string: STRING@14..20 " mical",
            },
        },
    ],
}
```

vim:ft=markdown
