crates/parser/tests/snapshots/tab_indent.snap
---
source: crates/parser/tests/snapshots.rs
---
# tab-indent

## Input

```
a 1
	b 2
c 3

```

## CST

```
SOURCE_FILE@0..13
  ENTRY@0..4
    WORD_KEY@0..1
      WORD@0..1 "a"
    SPACE@1..2 " "
    INTEGER@2..3
      NUMERAL@2..3 "1"
    NEWLINE@3..4 "\n"
  ERROR@4..8
    TAB@4..5 "\t"
    WORD@5..6 "b"
    SPACE@6..7 " "
    NUMERAL@7..8 "2"
  NEWLINE@8..9 "\n"
  ENTRY@9..13
    WORD_KEY@9..10
      WORD@9..10 "c"
    SPACE@10..11 " "
    INTEGER@11..12
      NUMERAL@11..12 "3"
    NEWLINE@12..13 "\n"
```

## Syntax Error

```
[
    SyntaxError {
        message: "tab indent is not allowed, skipping this line",
        range: 4..4,
    },
]
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..1 "a",
            },
            value: Integer {
                sign: none,
                numeral: NUMERAL@2..3 "1",
            },
        },
        Entry {
            key: WordKey {
                word: WORD@9..10 "c",
            },
            value: Integer {
                sign: none,
                numeral: NUMERAL@11..12 "3",
            },
        },
    ],
}
```

vim:ft=markdown
