crates/parser/tests/snapshots/tab_separator.snap
---
source: crates/parser/tests/snapshots.rs
---
# tab-separator

## Input

```
key	value

```

## CST

```
SOURCE_FILE@0..10
  ENTRY@0..10
    WORD_KEY@0..3
      WORD@0..3 "key"
    ERROR@3..4
      TAB@3..4 "\t"
    LINE_STRING@4..9
      STRING@4..9 "value"
    NEWLINE@9..10 "\n"
```

## Syntax Error

```
[
    SyntaxError {
        message: "tab separating is not allowed",
        range: 3..3,
    },
]
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: LineString {
                string: STRING@4..9 "value",
            },
        },
    ],
}
```

vim:ft=markdown
